# ollama-agent-benchmark

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
config/: benchmark.example.json
datasets/: benchmark_cases_v1.json  benchmark_cases_v2.json  fixtures_v1.json  fixtures_v2.json  performance_workloads_v1.json  performance_workloads_v2.json  tools_v1.json  tools_v2.json
docs/: architecture.md  limitations.md  methodology.md  metrics.md  migration-0.2.0.md  model-configuration.md  references.md  restore-after-format.md  security.md
docs/agents/: domain.md  issue-tracker.md
examples/m2-pro-16gb/: README.md
scripts/: backup_ollama_models.sh  bootstrap_macos.sh  publish_github.sh  run_official.sh
src/ollama_agent_benchmark/: __init__.py  cli.py  common.py  functional.py  model_lock.py  performance.py  preflight.py  report.py  validate.py
tests/: fake_ollama.py  test_common.py  test_dataset.py  test_evaluation.py  test_functional_helpers.py  test_integration_fake_ollama.py  test_report_integration.py  test_statistics.py  test_virtual_tools.py
