[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-agent-benchmark"
version = "0.1.0"
description = "Benchmark reproducible de modelos agentes locales servidos por Ollama"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Pablo Luque Moreno"}]
keywords = ["ollama", "llm", "benchmark", "agents", "apple-silicon", "mlx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.scripts]
oab = "ollama_agent_benchmark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
