[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-agent-benchmark"
version = "0.2.0"
description = "Benchmark reproducible de modelos agentes locales servidos por Ollama"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Pablo Luque Moreno"}]
keywords = ["ollama", "llm", "benchmark", "agents", "apple-silicon", "mlx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "mypy>=1.11",
  "ruff>=0.6",
]

[project.scripts]
oab = "ollama_agent_benchmark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"] # Los textos españoles del informe se conservan como literales legibles.

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["ollama_agent_benchmark"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
exclude_lines = [
  "if __name__ == .__main__.:",
  "^def main\\(", # La cobertura mide lógica reutilizable; la matriz CI prueba la envoltura CLI.
]
